# jelly-actix-web-starter

./: .gitignore  Cargo.toml  README.md  black_marlin.yml  build.rs  sqlx-data.json  tailwind.config.js
db/: 000_init.sql
jelly/: Cargo.toml
jelly/src/: email.rs  error.rs  lib.rs  prelude.rs  server.rs  utils.rs
jelly/src/guards/: auth.rs
jelly/src/request/: auth.rs  flash.rs  mod.rs  request.rs
migrations/: 20201104205425_users.sql  20210428084411_background-jobs.sql
src/: main.rs  pages.rs  utility.rs
src/accounts/: models.rs
src/accounts/jobs/: mod.rs  odd_registration_attempt.rs  reset_password.rs  verify.rs  welcome.rs
src/accounts/views/: register.rs  reset_password.rs  utils.rs
src/css/: site.css
src/js/: index.js  site.js
src/js/embla-carousel/: Alignment.js  Animation.js  Axis.js  Counter.js  Direction.js  DragHandler.js  DragTracker.js  Engine.js  EventEmitter.js  EventStore.js  Limit.js  Options.js  OptionsPseudo.js  PxToPercent.js  ScrollBody.js  ScrollBounds.js  ScrollContain.js  ScrollLimit.js  ScrollLooper.js  ScrollProgress.js  ScrollSnap.js  ScrollTarget.js  ScrollTo.js  SlideLooper.js  SlideSizes.js  SlidesInView.js  Translate.js  Vector1d.js  index.js  utils.js
src/js/embla-carousel-autoplay/: Options.js  index.js
src/pages/: _afore_body.stpl  _after_body.stpl  accounts.rs  footer.stpl  head.stpl  header.stpl  index.rs  index.stpl
src/pages/accounts/: forms.rs  login.rs  login_form.rs  new_account_form.rs  not_mod.rs  verify.rs
src/pages/dashboard/: index.rs
src/utility/: assets.rs  database.rs  error.rs  flash.rs  jobs.rs  mime_types.rs  password.rs  prelude.rs  request.rs  server.rs  templates.rs  tokens.rs  validators.rs
src/utility/assets/: disable_serving_assets.rs
src/utility/auth/: auth.rs
src/utility/models/: account.rs  user.rs
src/utility/tokens/: token_generator.rs  token_validator.rs
src/utility/validators/: booly.rs  date.rs  email.rs  forms.rs  slug.rs  text.rs
tests/: templates.rs
