#Original Author: ["Ryan McGrath <ryan@secretkeys.io>"]
[package]
name = "myproject-change-this-name"
version = "0.1.0"
authors = ["Put yaself here etc"]
edition = "2018"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
base64-url = "1.4.10"
actix-files = { version = "0.5.0" }
actix-http = "2.2.2"
actix-service = "2.0.2"
actix-session = "0.4.1"
actix-web = "3.3.3"
actix-rt = "2.6.0"
anyhow = "1.0.53"
async-trait = "0.1.52"
background-jobs = "0.12.0"
chrono = { version = "0.4.19", features = ["serde"] }
constant_time_eq = "0.1.5"
djangohashers = { version = "1.5.3", default-features = false, features = ["with_pbkdf2"] }
dotenv = "0.15.0"
env_logger = { version = "0.9.0", default-features = false, features = ["termcolor", "atty", "humantime"] }
futures = "0.3.19"
hmac = "0.12.0"
lazy_static = "1.4.0"
log = "0.4.14"
mime = "0.3.16"
minreq = { version = "2.5.1", features = ["https", "json-using-serde"] }
notify = { version = "4.0.17", optional = true }
pretty_env_logger = "0.4.0"
radix = "0.6.0"
rand = "0.8.4"
black_marlin = "0.3.4"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
sha3 = "0.10.0"
tokio = { version = "1.16.1", features = ["full"] }
uuid = { version = "0.8.2", features = ["serde", "v4", "wasm-bindgen" ]}
validator = "0.14.0"
zxcvbn = "2.1.2"
lettre = { version="0.9.6", optional = true }

[dependencies.sqlx ]
version = "0.5.10"
default-features = false
features = ["macros","sqlite","chrono","json","uuid","migrate","offline","runtime-tokio-rustls",]

[features]
#The following line sets the notify to be included
default = ["notify"]
email-smtp = [ "lettre" ]
email-postmark = [ ]
email-sendgrid = [ ]
#The following line would be used to determine if we want to activate with_pbkdf2
production = ["actix-web/secure-cookies", "djangohashers/with_pbkdf2"]

[dev-dependencies]
anyhow = "1.0.53"
dotenv = "0.15.0"
env_logger = "0.9.0"
lazy_static = "1.4.0"
test-log = "0.2.8"
httpmock = "0.6.6"